# mock-chatbot

./: README.md  package-lock.json  package.json
backend/: .env  main.py  pyproject.toml
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: StripePayment.tsx
